--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -41,15 +41,21 @@ button {
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 700;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: hsl(0, 0%, 100%);
+  color: #0b4018;
   cursor: pointer;
   transition: border-color 0.25s;
+
+  &:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
 }
 
 button:hover {
-  border-color: #646cff;
+  border-color: #33f964;
 }
 
 button:focus,
